syntax = "proto3";

package clutch.core.project.v1;

import "google/protobuf/struct.proto";

option go_package = "github.com/lyft/clutch/backend/api/core/project/v1;projectv1";

// A project is the logical abstraction for a service, library, mobile app, etc.
// Adding this higher level primitive will enable a more generic way of
// addressing commonalities between various system types.
message Project {
  string name = 1;
  string tier = 2;
  repeated string owners = 3;
  repeated string languages = 4;
  // Allows an organization to populate any information they see fit that does not fit our schema
  map<string, google.protobuf.Value> data = 5;
  ProjectDependencies dependencies = 6;
  OnCall oncall = 7;
}

// Dependencies could be either upstream or downstream of this project.
message ProjectDependencies {
  // The key in this map is the type_url of the dependency
  map<string, Dependency> upstreams = 1;
  map<string, Dependency> downstreams = 2;
}

message Dependency {
  repeated string ids = 1;
}

// Oncall information that could come from several sources for a project
// From active alerts from source like pagerduty, to who is currently on call.
message OnCall {
  PagerDuty pagerduty = 1;
}

// PagerDuty specific information for a project
message PagerDuty {
  // A project may have more than one PagerDuty service id
  // https://developer.pagerduty.com/api-reference/docs/CONCEPTS.md#services
  repeated string service_ids = 1;
}
